# BatDongSan1

bds_contract/: README.md
bds_contract/contracts/hello-world/: Cargo.toml
bds_contract/contracts/hello-world/src/: lib.rs
