[package]
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

# Patch getrandom để build wasm32-unknown-unknown
[patch.crates-io]
getrandom = { version = "0.3.4", features = ["js"], default-features = false }
